[tool.poetry]
name = "finance_tracker"
version = "0.1.0"
description = ""
authors = ["TheCrabilia <ilja.spirts@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pyTelegramBotAPI = "^4.1.1"
psycopg = "^3.0.1"

[tool.poetry.dev-dependencies]
pylint = "^2.11.1"
black = {version = "^21.9b0", allow-prereleases = true}
autopep8 = "^1.5.7"
ipykernel = "^6.4.1"
bpython = "^0.21"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
